--- a/config.yml
+++ b/config.yml
@@ -72,3 +72,51 @@ ons_birth_imd_table: "ONS_BIRTHS_IMD"
 
 # ICB classification
 icb_classification: 2023
+
+# Data table caveats
+caveat_country_other: "A country classification of 'Other' will represent applications with a postcode for a country other than England."
+caveat_country_unknown: "A country classification of 'Unknown' will represent applications where the postcode could not be assigned to any country."
+caveat_active_coverage: "The term 'active certifice' refers to the start and end date of the certificate and does not consider if the certificate is being used."
+caveat_age_restriction: "An age band of 'unknown' has been used where the applicants age could not be confidently assigned from the available data."
+caveat_imd_restriction: "IMD quintiles cannot be assigned to applicants that can not be associated to an English postcode."
+caveat_icb_method: "The reported ICB is derived from the postcode held for an applicant."
+caveat_icb_restriction: "ICBs cannot be assigned to applicants that can not be associated to an English postcode."
+caveat_cert_issued: "Results limited to cases where the application has been fully completed, assessed and a certificate issued to the applicant."
+
+caveat_lis_issued: "Results limited to cases where the application has been fully completed, assessed and a decision issued to the applicant."
+caveat_lis_no_cert_fy: "Where no certificate is issued, the financial year is based on the date of application in lieu of no available date of certificate being issued."
+caveat_lis_active_duration: "Certificates can be valid for upto 5 years and therefore some certificates may be represented in figures for multiple years."
+caveat_lis_duration_group: "Certificate duration has been grouped into categories based on time between start and end date for the certificate, rounded to nearest number of months."
+caveat_lis_age_group: "Age is calculated at the point of application, in 5 year age bands, with applicants aged 65 and over grouped as 65+."
+caveat_lis_base_population: "Base population figures represent mid-year population estimates published by ONS for people aged 16 and over."
+
+caveat_mat_country: "Maternity exemption certificates are only available for people living in England."
+caveat_mat_active_duration: "Certificates can be valid during pregnancy and upto one year following birth. Therefore some certificates may be represented in figures for multiple years."
+caveat_mat_duration_method: "Number of months based on difference between due date and date of certificate issue, rounded to the nearest number of months."
+caveat_mat_due_date: "Due date will be supplied during application and therefore may not exactly match delivery date."
+caveat_mat_duration_restriction: "Number of months reported as 'NA' where captured due date was unavailable or would suggest potential data quality issues."
+caveat_mat_age_group: "Age is calculated at the point of application, in 5 year age bands, with applicants aged 45 and over grouped as 45+."
+caveat_mat_live_births: "For context data includes live birth figures, based on data published by ONS."
+caveat_mat_base_population: "Base population figures represent mid-year population estimates published by ONS for females aged 16 to 45."
+
+caveat_med_country: "Medical exemption certificates are only available for people living in England."
+caveat_med_active_duration: "Certificates are usually valid for five years and therefore certificates may be represented in figures for multiple years."
+caveat_med_age_group: "Age is calculated at the point of application, in 5 year age bands."
+caveat_med_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions."
+
+caveat_ppc_country: "Prescription prepayment certificates are only available for people living in England."
+caveat_ppc_type_unknown: "A certificate type of 'N/A' has been used where the certificate type cannot be identified as 3-month or 12-month from the available data."
+caveat_ppc_age_group: "Age is calculated at the point of application, in 5 year age bands."
+caveat_ppc_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions."
+
+caveat_hrtppc_start: "The HRT PPC was introduced in April 2023."
+caveat_hrtppc_country: "HRT PPCs are only available for people living in England."
+caveat_hrtppc_postdate: "When applying for a HRT PPC, applicants can choose the start date for the certificate. This can be up to one calendar month before or after the application is submitted."
+caveat_hrtppc_age_group: "Age is calculated at the point of application, in 5 year age bands."
+caveat_hrtppc_px_data: "For context data in includes the estimated number of patients receiving NHS prescriptions for medications that can be covered by the HRT PPC."
+caveat_hrtppc_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions for medications that can be covered by the HRT PPC."
+
+caveat_tax_issued: "Certificates are issued automatically to eligible individuals identified by HM Revenue and Customs."
+caveat_tax_age_band: "Age is calculated at the point certificate issue, in 5 year age bands, with applicants aged 65 and over grouped as 65+."
+caveat_tax_age_group: "Age is calculated at the point certificate issue, with applicants grouped as either 'Under 40' or '40 and over'."
+caveat_tax_base_population: "Base population figures represent mid-year population estimates published by ONS for people aged 16 and over."
