--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-publication_top_name: "Help with Health Costs (HwHC)"
+publication_top_name: "NHS Help with Health Costs (HwHC)"
 publication_sub_name: "2018/19 to 2023/24"
 publication_date: "20 June 2024"
 responsible_statistician: "Steven Buckley"
@@ -25,19 +25,17 @@ extract_px_age_dt: 20230930   # date to use to calculate patient age
 
 # time period criteria
 min_trend_ym_lis: "201804"
-min_trend_active_ym_lis: "201904" # need to check impact of deleted records to choose period
 max_trend_ym_lis: "202403"
 min_focus_ym_lis: "202304"
 max_focus_ym_lis: "202403"
 
 min_trend_ym_mat: "201804"
-min_trend_active_ym_mat: "201904" # need to check impact of deleted records to choose period
+
 max_trend_ym_mat: "202403"
 min_focus_ym_mat: "202304"
 max_focus_ym_mat: "202403"
 
 min_trend_ym_med: "201804"
-min_trend_active_ym_med: "201904" # need to check impact of deleted records to choose period
 max_trend_ym_med: "202403"
 min_focus_ym_med: "202304"
 max_focus_ym_med: "202403"
@@ -82,7 +80,6 @@ icb_classification: 2023
 # Data table caveats
 caveat_country_other: "A country classification of 'Other' will represent applications with a postcode for a country other than England."
 caveat_country_unknown: "A country classification of 'Unknown' will represent applications where the postcode could not be assigned to any country."
-caveat_active_coverage: "The term 'active certificate' refers to the start and end date of the certificate and does not consider if the certificate is being used. A certificate will be active if it was valid for one or more days during the period."
 caveat_age_restriction: "An age band of 'Not Available' has been used where the applicants age could not be confidently assigned from the available data."
 caveat_imd_restriction: "IMD quintiles cannot be assigned to applicants that can not be associated to an English postcode."
 caveat_icb_method: "The reported ICB is derived from the postcode held for an applicant."
@@ -90,23 +87,20 @@ caveat_icb_restriction: "ICBs cannot be assigned to applicants that can not be a
 caveat_cert_issued: "Results limited to cases where the application has been fully completed, assessed and a certificate issued to the applicant."
 
 caveat_lis_issued: "Results limited to cases where the application has been fully completed, assessed and a decision issued to the applicant."
-caveat_lis_active_duration: "Certificates can be valid for upto 5 years and therefore some certificates may be represented in figures for multiple years."
 caveat_lis_duration_group: "Certificate duration has been grouped into categories based on time between start and end date for the certificate, rounded to nearest number of months."
+caveat_lis_duration_notes: "The circumstances of the applicant will determine the duration of the certificate. This will reflect the chances of circumstances changing, with some common scenarios: Pensioners receiving full help may receive a 5 year certificate. Non final-year students may receive a 12 month certificate. Applicants in receipt of non-means tested benefit may receive a 12 month certificate. Applicants earning a wage may receive a 6 month certificate. Students nearing the end of their course may receive a short term certificate until the end of their course."
 caveat_lis_age_group: "Age is calculated at the point of application, in 5 year age bands, with applicants aged 65 and over grouped as 65+."
 caveat_lis_base_population: "Base population figures represent mid-year population estimates published by ONS for people aged 16 and over."
 caveat_lis_hbd11: "Some HC3 certificates may include a HBD11 letter. These represent circumstances where the certificate holders required contribution to health costs may exceed the maximum cost of NHS dental treatment."
 
 caveat_mat_country: "Maternity exemption certificates are only available for people living in England."
-caveat_mat_active_duration: "Certificates can be valid during pregnancy and upto one year following birth. Therefore some certificates may be represented in figures for multiple years."
 caveat_mat_duration_method: "Number of months based on difference between due date and date of certificate issue, rounded to the nearest number of months."
-caveat_mat_due_date: "Due date will be supplied during application and therefore may not exactly match delivery date."
-caveat_mat_duration_restriction: "Number of months reported as 'NA' where captured due date was unavailable or would suggest potential data quality issues."
+caveat_mat_duration_restriction: "Number of months reported as 'Not Available' where captured due date was unavailable or would suggest potential data quality issues."
 caveat_mat_age_group: "Age is calculated at the point of application, in 5 year age bands, with applicants aged 45 and over grouped as 45+."
 caveat_mat_live_births: "For context data includes live birth figures, based on data published by ONS."
 caveat_mat_base_population: "Base population figures represent mid-year population estimates published by ONS for females aged 16 to 45."
 
 caveat_med_country: "Medical exemption certificates are only available for people living in England."
-caveat_med_active_duration: "Certificates are usually valid for five years and therefore certificates may be represented in figures for multiple years."
 caveat_med_age_group: "Age is calculated at the point of application, in 5 year age bands."
 caveat_med_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions."
 
