--- a/config.yml
+++ b/config.yml
@@ -3,10 +3,10 @@ publication_sub_name: "2018/19 to 2023/24"
 publication_date: "20 June 2024"
 responsible_statistician: "Steven Buckley"
 stats_survey_link: "https://online1.snapsurveys.com/Official_Statistics_Feedback"
-publication_table_title: "Help with Health Costs (HwHC) - 2019/20 to 2023/24"
+publication_table_title: "Help with Health Costs (HwHC) - 2018/19 to 2023/24"
 publication_title: "help-with-health-costs"
 methodology_title: "help-with-health-costs-methodology"
-output_type: "html_document" # html_document / word_document
+output_type: "word_document" # html_document / word_document
 
 # data table criteria
 rebuild_base_lis_data: FALSE
@@ -23,48 +23,55 @@ extract_px_min_ym: 202304
 extract_px_max_ym: 202403
 extract_px_age_dt: 20230930   # date to use to calculate patient age
 
+# PowerBI criteria
+rebuild_powerbi_data: FALSE
+rebuild_prescription_population_data: FALSE
+powerbi_min_ym_lis: "201804"
+powerbi_max_ym_lis: "202403"
+powerbi_min_ym_hes: "201804"
+powerbi_max_ym_hes: "202403"
+powerbi_min_ym_hrtppc: "202304"
+powerbi_max_ym_hrtppc: "202403"
+px_pop_data_fy_list: "18_19,19_20,20_21,21_22,22_23,23_24" # provide as comma seperated list
+px_pop_data_fy_min_ym: "201804,201904,202004,202104,202204,202304" # provide as comma seperated list
+px_pop_data_fy_max_ym: "201903,202003,202103,202203,202303,202403" # provide as comma seperated list
+
 # time period criteria
 min_trend_ym_lis: "201804"
 max_trend_ym_lis: "202403"
 min_focus_ym_lis: "202304"
 max_focus_ym_lis: "202403"
+focus_fy_lis: "2023/2024"
 
 min_trend_ym_mat: "201804"
-
 max_trend_ym_mat: "202403"
 min_focus_ym_mat: "202304"
 max_focus_ym_mat: "202403"
+focus_fy_mat: "2023/2024"
 
 min_trend_ym_med: "201804"
 max_trend_ym_med: "202403"
 min_focus_ym_med: "202304"
 max_focus_ym_med: "202403"
+focus_fy_med: "2023/2024"
 
 min_trend_ym_ppc: "201804"
 max_trend_ym_ppc: "202403"
 min_focus_ym_ppc: "202304"
 max_focus_ym_ppc: "202403"
+focus_fy_ppc: "2023/2024"
 
 min_trend_ym_tax: "201804"
 max_trend_ym_tax: "202403"
 min_focus_ym_tax: "202304"
 max_focus_ym_tax: "202403"
+focus_fy_tax: "2023/2024"
 
 min_focus_ym_hrt: "202304"
 max_focus_ym_hrt: "202403"
+focus_fy_hrt: "2023/2024"
 
 # base population criteria
-ons_pop_year: "2022"
-lis_min_pop_age: 16
-lis_max_pop_age: 90
-mat_min_pop_age: 15
-mat_max_pop_age: 45
-med_min_pop_age: 16
-med_max_pop_age: 59
-ppc_min_pop_age: 16
-ppc_max_pop_age: 59
-tax_min_pop_age: 16
-tax_max_pop_age: 90
 hrt_min_pop_age: 16
 hrt_max_pop_age: 59
 ons_pop_rate_denominator: 10000
@@ -93,43 +100,30 @@ caveat_lis_age_group: "Age is calculated at the point of application, in 5 year 
 caveat_lis_base_population: "Base population figures represent mid-year population estimates published by ONS for people aged 16 and over."
 caveat_lis_hbd11: "Some HC3 certificates may include a HBD11 letter. These represent circumstances where the certificate holders required contribution to health costs may exceed the maximum cost of NHS dental treatment."
 
-caveat_mat_country: "Maternity exemption certificates are only available for people living in England."
-caveat_mat_duration_method: "Number of months based on difference between due date and date of certificate issue, rounded to the nearest number of months."
-caveat_mat_duration_restriction: "Number of months reported as 'Not Available' where captured due date was unavailable or would suggest potential data quality issues."
+caveat_mat_country: "As a maternity exemption certificate provides support with NHS prescription charges, support is generally applicable to applicants from England only."
+caveat_mat_duration_method: "Number of months based on difference between certificate start and expiration dates, rounded to the nearest number of months."
+caveat_mat_duration_restriction: "Number of months reported as 'Not Available' where dates are unavailable or would suggest potential data quality issues."
 caveat_mat_age_group: "Age is calculated at the point of application, in 5 year age bands, with applicants aged 45 and over grouped as 45+."
 caveat_mat_live_births: "For context data includes live birth figures, based on data published by ONS."
-caveat_mat_base_population: "Base population figures represent mid-year population estimates published by ONS for females aged 16 to 45."
+caveat_mat_base_population: "Base population figures represent mid-year population estimates published by ONS for females aged 15 to 45."
 
-caveat_med_country: "Medical exemption certificates are only available for people living in England."
+caveat_med_country: "As a medical exemption certificate provides support with NHS prescription charges, support is generally applicable to applicants from England only."
 caveat_med_age_group: "Age is calculated at the point of application, in 5 year age bands."
-caveat_med_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions."
+caveat_med_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions. Patient counts are limited to patients receiving electronic prescribing where a date of birth was available and the patient could be assigned to a ICB based on their captured postcode."
 
-caveat_ppc_country: "Prescription prepayment certificates are only available for people living in England."
+caveat_ppc_country: "As a PPC provides support with NHS prescription charges, support is generally applicable to applicants from England only."
 caveat_ppc_type_unknown: "A certificate type of 'Not Available' has been used where the certificate type cannot be identified as 3-month or 12-month from the available data."
 caveat_ppc_age_group: "Age is calculated at the point of application, in 5 year age bands."
-caveat_ppc_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions."
+caveat_ppc_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions. Patient counts are limited to patients receiving electronic prescribing where a date of birth was available and the patient could be assigned to a ICB based on their captured postcode."
 
 caveat_hrtppc_start: "The HRT PPC was introduced in April 2023."
-caveat_hrtppc_country: "HRT PPCs are only available for people living in England."
+caveat_hrtppc_country: "As a HRT PPC provides support with NHS prescription charges, support is generally applicable to applicants from England only."
 caveat_hrtppc_postdate: "When applying for a HRT PPC, applicants can choose the start date for the certificate. This can be up to one calendar month before or after the application is submitted."
 caveat_hrtppc_age_group: "Age is calculated at the point of application, in 5 year age bands."
 caveat_hrtppc_px_data: "For context data in includes the estimated number of patients receiving NHS prescriptions for medications that can be covered by the HRT PPC."
-caveat_hrtppc_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions for medications that can be covered by the HRT PPC."
+caveat_hrtppc_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions for medications that can be covered by the HRT PPC. Patient counts are limited to patients receiving electronic prescribing where a date of birth was available and the patient could be assigned to a ICB based on their captured postcode. Prescribing limited to medications flagged as eligible for support via the HRT PPC at any point during the reporting period."
 
 caveat_tax_issued: "Certificates are issued automatically to eligible individuals identified by HM Revenue and Customs."
 caveat_tax_age_band: "Age is calculated at the point certificate issue, in 5 year age bands, with applicants aged 65 and over grouped as 65+."
 caveat_tax_age_group: "Age is calculated at the point certificate issue, with applicants grouped as either 'Under 40' or '40 and over'."
 caveat_tax_base_population: "Base population figures represent mid-year population estimates published by ONS for people aged 16 and over."
-
-# PowerBI criteria
-rebuild_powerbi_data: FALSE
-rebuild_prescription_population_data: FALSE
-powerbi_min_ym_lis: "201804"
-powerbi_max_ym_lis: "202403"
-powerbi_min_ym_hes: "201804"
-powerbi_max_ym_hes: "202403"
-powerbi_min_ym_hrtppc: "202304"
-powerbi_max_ym_hrtppc: "202403"
-px_pop_data_fy_list: "18_19,19_20,20_21,21_22,22_23,23_24" # provide as comma seperated list
-px_pop_data_fy_min_ym: "201804,201904,202004,202104,202204,202304" # provide as comma seperated list
-px_pop_data_fy_max_ym: "201903,202003,202103,202203,202303,202403" # provide as comma seperated list
