reorder output data and updated MATEX duration
also made some tweaks to notes

--- a/config.yml
+++ b/config.yml
@@ -88,21 +88,23 @@ icb_classification: 2023
 caveat_country_other: "A country classification of 'Other' will represent applications with a postcode for a country other than England."
 caveat_country_unknown: "A country classification of 'Unknown' will represent applications where the postcode could not be assigned to any country."
 caveat_age_restriction: "An age band of 'Not Available' has been used where the applicants age could not be confidently assigned from the available data."
-caveat_imd_restriction: "IMD quintiles cannot be assigned to applicants that can not be associated to an English postcode."
+caveat_imd_restriction: "IMD quintiles reported as 'Not Available' where applicants can not be associated to an English postcode."
 caveat_icb_method: "The reported ICB is derived from the postcode held for an applicant."
 caveat_icb_restriction: "ICBs cannot be assigned to applicants that can not be associated to an English postcode."
+caveat_icb_missing_data: "Data is not available for base population, and therefore calculated rates per 10,000 population, for data where an ICB location cannot be assigned."
 caveat_cert_issued: "Results limited to cases where the application has been fully completed, assessed and a certificate issued to the applicant."
 
 caveat_lis_issued: "Results limited to cases where the application has been fully completed, assessed and a decision issued to the applicant."
-caveat_lis_duration_group: "Certificate duration has been grouped into categories based on time between start and end date for the certificate, rounded to nearest number of months."
+caveat_lis_duration_group: "Certificate duration has been grouped into categories based on the number of months between the start and end date for the certificate, rounded to nearest number of months."
 caveat_lis_duration_notes: "The circumstances of the applicant will determine the duration of the certificate. This will reflect the chances of circumstances changing, with some common scenarios: Pensioners receiving full help may receive a 5 year certificate. Non final-year students may receive a 12 month certificate. Applicants in receipt of non-means tested benefit may receive a 12 month certificate. Applicants earning a wage may receive a 6 month certificate. Students nearing the end of their course may receive a short term certificate until the end of their course."
 caveat_lis_age_group: "Age is calculated at the point of application, in 5 year age bands, with applicants aged 65 and over grouped as 65+."
 caveat_lis_base_population: "Base population figures represent mid-year population estimates published by ONS for people aged 16 and over."
 caveat_lis_hbd11: "Some HC3 certificates may include a HBD11 letter. These represent circumstances where the certificate holders required contribution to health costs may exceed the maximum cost of NHS dental treatment."
 
 caveat_mat_country: "As a maternity exemption certificate provides support with NHS prescription charges, support is generally applicable to applicants from England only."
-caveat_mat_duration_method: "Number of months based on difference between certificate start and expiration dates, rounded to the nearest number of months."
-caveat_mat_duration_restriction: "Number of months reported as 'Not Available' where dates are unavailable or would suggest potential data quality issues."
+caveat_mat_duration_method: "Certificate duration has been grouped into categories based on the number of months between the start and end date for the certificate, rounded to nearest number of months."
+caveat_mat_duration_restriction: "Certificate duration reported as 'Not Available' where duration could not be confidently assigned from the available data."
+caveat_mat_duration_notes: "Certificates are valid upto one year after the birth of the child. Therefore, certificate duration will reflect how early in pregnancy the application was received. A certificate duration of less than a year would represent certificates issued after the birth of the child."
 caveat_mat_age_group: "Age is calculated at the point of application, in 5 year age bands, with applicants aged 45 and over grouped as 45+."
 caveat_mat_live_births: "For context data includes live birth figures, based on data published by ONS."
 caveat_mat_base_population: "Base population figures represent mid-year population estimates published by ONS for females aged 15 to 45."
