Update config caveats and metadata

--- a/config.yml
+++ b/config.yml
@@ -115,22 +115,22 @@ icb_classification: 2023
 caveat_country_other: "A country classification of 'Other' will represent applications with a postcode for a country other than England."
 caveat_country_unknown: "A country classification of 'Unknown' will represent applications where the postcode could not be assigned to any country."
 caveat_age_restriction: "An age band of 'Not Available' has been used where the applicant's age could not be confidently assigned from the available data."
-caveat_imd_restriction: "IMD quintiles reported as 'Not Available' where applicants cannot be associated to an English postcode."
+caveat_imd_restriction: "IMD quintiles are reported as 'Not Available' where applicants cannot be associated to an English postcode."
 caveat_icb_method: "The reported ICB is derived from the postcode held for an applicant."
 caveat_icb_restriction: "ICBs cannot be assigned to applicants that cannot be associated to an English postcode."
-caveat_icb_missing_data: "Data is not available for base population, and therefore calculated rates per 10,000 population, for data where an ICB location cannot be assigned."
-caveat_cert_issued: "Results limited to cases where the application has been fully completed, assessed and a certificate issued to the applicant."
+caveat_icb_missing_data: "For data where an ICB location cannot be assigned, data is not available for base population, and therefore calculated rates per 10,000 population are not available. These cells will appear blank."
+caveat_cert_issued: "Data is limited to cases where the application has been fully completed, assessed and a certificate issued to the applicant."
 
-caveat_lis_issued: "Results limited to cases where the application has been fully completed, assessed and a decision issued to the applicant."
+caveat_lis_issued: "Data is limited to cases where the application has been fully completed, assessed and a decision issued to the applicant."
 caveat_lis_duration_group: "Certificate duration has been grouped into categories based on the number of months between the start and end date for the certificate, rounded to nearest number of months."
-caveat_lis_duration_notes: "The circumstances of the applicant will determine the duration of the certificate. This will reflect the chances of circumstances changing, with some common scenarios: Pensioners receiving full help may receive a 5 year certificate. Non final-year students may receive a 12 month certificate. Applicants in receipt of non-means tested benefit may receive a 12 month certificate. Applicants earning a wage may receive a 6 month certificate. Students nearing the end of their course may receive a short term certificate until the end of their course."
+caveat_lis_duration_notes: "The circumstances of the applicant will determine the duration of the certificate. This will reflect the chances of circumstances changing, with some common scenarios. For example, Pensioners receiving full help may receive a 5 year certificate, and non final-year students may receive a 12 month certificate. Applicants in receipt of non-means tested benefit may receive a 12 month certificate. Applicants earning a wage may receive a 6 month certificate. Students nearing the end of their course may receive a short term certificate until the end of their course."
 caveat_lis_age_group: "Age is calculated at the point of application, in 5 year age bands, with applicants aged 65 and over grouped as 65+."
 caveat_lis_base_population: "Base population figures represent mid-year population estimates published by ONS for people aged 16 and over. The latest year available at time of publishing was 2022."
 caveat_lis_hbd11: "Some HC3 certificates may include a HBD11 letter. These represent circumstances where the certificate holders required contribution to health costs may exceed the maximum cost of NHS dental treatment."
 
 caveat_mat_country: "As a maternity exemption certificate provides support with NHS prescription charges, support is generally applicable to applicants from England only."
 caveat_mat_duration_method: "Certificate duration has been grouped into categories based on the number of months between the start and end date for the certificate, rounded to nearest number of months."
-caveat_mat_duration_restriction: "Certificate duration reported as 'Not Available' where duration could not be confidently assigned from the available data."
+caveat_mat_duration_restriction: "Certificate duration has been reported as 'Not Available' where duration could not be confidently assigned from the available data."
 caveat_mat_duration_notes: "Certificates are valid for up to one year from the baby's due date or the birth of the baby. Therefore, certificate duration will reflect how early in pregnancy the application was received. A certificate duration of less than a year would represent certificates issued after the due date or birth of the child."
 caveat_mat_age_group: "Age is calculated at the point of application, in 5 year age bands, with applicants aged 45 and over grouped as 45+."
 caveat_mat_live_births: "For context data includes live birth figures, based on data published by ONS."
@@ -146,8 +146,8 @@ caveat_ppc_age_group: "Age is calculated at the point of application, in 5 year 
 caveat_ppc_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions. Patient counts are limited to patients receiving electronic prescribing where a date of birth was available and the patient could be assigned to a ICB based on their captured postcode."
 
 caveat_hrtppc_start: "The HRT PPC was introduced on 1 April 2023."
-caveat_hrtppc_country: "As a HRT PPC provides support with NHS prescription charges, support is generally applicable to applicants from England only."
-caveat_hrtppc_postdate: "When applying for a HRT PPC, applicants can choose the start date for the certificate. This can be up to one calendar month before or after the application is submitted."
+caveat_hrtppc_country: "As an HRT PPC provides support with NHS prescription charges, support is generally applicable to applicants from England only."
+caveat_hrtppc_postdate: "When applying for an HRT PPC, applicants can choose the start date for the certificate. This can be up to one calendar month before or after the application is submitted."
 caveat_hrtppc_age_group: "Age is calculated at the point of application, in 5 year age bands."
 caveat_hrtppc_px_data: "The estimated number of patients receiving NHS prescriptions for medications that can be covered by the HRT PPC has been included for context."
 caveat_hrtppc_base_population: "Base population figures represent estimated number of patients, aged 16-59, receiving NHS prescriptions for medications that can be covered by the HRT PPC. Patient counts are limited to patients receiving electronic prescribing where a date of birth was available and the patient could be assigned to a ICB based on their captured postcode. Prescribing limited to medications flagged as eligible for support via the HRT PPC at any point during the reporting period."
